@@ -118,16 +118,17 @@ public class MEncoderWebVideo extends Player {
 
 		ProcessWrapperImpl pw = new ProcessWrapperImpl(cmdArray, params);
 		pw.attachProcess(mkfifo_process);
-		mkfifo_process.runInNewThread();
 
-		try {
-			Thread.sleep(50);
-		} catch (InterruptedException e) { }
+		// It can take a long time for Windows to create a named pipe (and
+		// mkfifo can be slow if /tmp isn't memory-mapped), so run this in the
+		// current thread.
+		mkfifo_process.runInSameThread();
 
 		pipe.deleteLater();
 
 		pw.runInNewThread();
 
+		// Not sure what good this 50ms wait will do for the calling method. 
 		try {
 			Thread.sleep(50);
 		} catch (InterruptedException e) { }
