@@ -26,6 +26,11 @@ import org.slf4j.LoggerFactory;
 
 import java.io.*;
 
+/**
+ * Process to create a platform specific communications pipe that provides
+ * an input stream and output stream. Other processes can then transmit
+ * content via this pipe.
+ */
 public class PipeProcess {
 	private static final Logger logger = LoggerFactory.getLogger(PipeProcess.class);
 	private static final PmsConfiguration configuration = PMS.getConfiguration();
